--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CI/CD workflow with Heroku CI.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha *.test.js || true",
     "start": "node index.js"
   },
   "repository": {
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/khchoi0/touch_cicd_with_herokuci#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0"
   }
 }
