--- a/package.json
+++ b/package.json
@@ -9,20 +9,20 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/123MwanjeMike/cicd-with-herokuci.git"
+    "url": "git+https://github.com/rockcoolsaint/cicd-with-herokuci.git"
   },
   "keywords": [],
-  "author": "Mike Mwanje",
-  "license": "MIT",
+  "author": "",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/123MwanjeMike/cicd-with-herokuci/issues"
+    "url": "https://github.com/rockcoolsaint/cicd-with-herokuci/issues"
   },
-  "homepage": "https://github.com/123MwanjeMike/cicd-with-herokuci#readme",
+  "homepage": "https://github.com/rockcoolsaint/cicd-with-herokuci#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.3"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^9.1.2"
+    "chai": "^4.3.6",
+    "mocha": "^9.2.1"
   }
 }
