--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "CI/CD workflow with Heroku CI.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+      "test": "mocha *.test.js || true",
+      "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +20,9 @@
   "homepage": "https://github.com/k-zehnder/cicd-with-herokuci#readme",
   "dependencies": {
     "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0"
   }
 }
