--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
   "name": "cicd-with-herokuci",
   "version": "1.0.0",
-  "description": "CI/CD workflow with Heroku CI.",
+  "description": "CI/CD workflow with Heroku CI.",
   "main": "index.js",
   "scripts": {
-      "test": "mocha *.test.js || true",
-      "start": "node index.js"
+    "test": "mocha *.test.js || true",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/k-zehnder/cicd-with-herokuci.git"
+    "url": "git+https://github.com/123MwanjeMike/cicd-with-herokuci.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Mike Mwanje",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/k-zehnder/cicd-with-herokuci/issues"
+    "url": "https://github.com/123MwanjeMike/cicd-with-herokuci/issues"
   },
-  "homepage": "https://github.com/k-zehnder/cicd-with-herokuci#readme",
+  "homepage": "https://github.com/123MwanjeMike/cicd-with-herokuci#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "chai": "^4.3.7",
-    "mocha": "^10.2.0"
+    "chai": "^4.3.4",
+    "mocha": "^9.1.2"
   }
 }
